--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.46.0",
+    "@aws-sdk/client-ivs": "^3.46.0",
     "aws-cdk-lib": "2.5.0",
+    "aws-sdk": "^2.1054.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   }
