--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@aws-sdk/client-dynamodb": "^3.46.0",
     "@aws-sdk/client-ivs": "^3.46.0",
     "aws-cdk-lib": "2.5.0",
-    "aws-sdk": "^2.1054.0",
+    "aws-sdk": "^2.1209.0",
+    "axios": "^0.27.2",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   }
